--- a/index Rafael.html
+++ b/index Rafael.html
@@ -182,6 +182,20 @@ awdawd
 
 
 
+    <!-- Parallax Section -->
+    <div class="bg-image-v1 parallaxBg">
+        <div class="container">
+            <div class="headline-center headline-light wow bounceIn">
+                <h2>Unify is a clean and fully responsive incredible template</h2>
+                <p>Integer odio ligula, tincidunt id volutpat et, imperdiet eget mi. Quisque laoreet porttitor turpis sed <a href="#">fermentum</a>. Nullam sodales blandit nisi, tristique tempor nunc hendrerit at. Sed posuere mollis orci</p><br>
+                <button type="button" class="btn-u btn-brd btn-brd-hover btn-u-light">Download Now</button>
+            </div><!--/end Headline Center-->
+        </div>
+    </div>
+    <!-- End Parallax Section -->
+
+
+
     <!--=== Service Block v5 ===-->
     <div class="service-block-v5">
         <div class="container">
